work overflow fixed

--- a/stylesheets/app.scss
+++ b/stylesheets/app.scss
@@ -93,7 +93,7 @@ $helvetica: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 .work {
   width: 100%;
   position: relative;
-  overflow: visible;
+  overflow: auto;
 
   background: $bottom-background;
 
